Skip to content

Incorrect rawvid-fps command line parameter parsing (29.97)

The command line parameter for frames-per-second is not being correctly parsed by the Win32 version of VLC (2.1.5), when playing back raw video.

Here is an example command line that fails (behaves incorrectly):

vlc --rawvid-fps 29.97 --rawvid-width 180 --rawvid-height 120 --rawvid-chroma I420 BlindKitten_180x120.yuv

Given the above command line, the VLC instance shows the video, but checking the frame rate (Tools : Codec Information) shows fps==33.85

A workaround exists with the alternate syntax:

vlc --rawvid-fps 2997/100 --rawvid-width 180 --rawvid-height 120 --rawvid-chroma I420 BlindKitten_180x120.yuv

Whereupon VLC will report/show the correct, expected fps of 29.970000.

Since a workaround exists, I set the severity to minor.

But since 29.97 is shown in the internal help text (vlc --full-help) and behaves incorrectly with that common parameter, it should eventually be fixed.

This bug might also be a clue to any other bugs that involve the command line parsing of floating-point parameters.

To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information