rawvid: fix parsing frame and aspect ratii (fixes #13532)